# claude-browse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  claude-browse  claude-resume  install.sh  pyproject.toml
.github/workflows/: ci.yml
claude_browse/: __init__.py  browse.py  core.py  resume.py
launch/: README.md  hn.md  producthunt.md  reddit.md  social.md
tests/: test_core.py
tests/fixtures/: malformed.jsonl  sample_session.jsonl
